k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-db
spec:
  podSelector:
    matchLabels:
      app: postgres-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask-api
      ports:
        - port: 5432
